Modulos principales completos

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,21 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".Activity.AdmCursoActivity"
+            android:label="@string/title_activity_adm_curso"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".Activity.AdmProfesorActivity"
+            android:label="@string/title_activity_adm_profesor"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Activity.AdmCarreraActivity"
+            android:label="@string/title_activity_adm_carrera"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
             android:name=".Activity.AdmEstudianteActivity"
             android:label="Estudiantes"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".Activity.NavDrawerActivity"
             android:label="@string/title_activity_nav_drawer"
